2001-06-01  Dave Peticolas  <dave@krondo.com>

	* src/gnc-ui-util.c: use new scanf macro below

	* src/engine/sixtp-dom-parsers.c (string_to_integer): use new
	scanf macro below

	* src/engine/sixtp-utils.c: use new scanf macro below

	* src/engine/gnc-numeric.c: use new scanf macro below

	* src/engine/gnc-engine-util.h: define GNC_SCANF_LLD macro to use
	for scanf long long int conversion. This is needed since there is
	not a common solution between Linux, Solaris, and FreeBSD. Thanks
	to Matthew Condell for finding the problem and to Matt and Alan
	Orndorff for testing it.

	* configure.in: invoke conversion test below

	* acinclude.m4: add test for %lld scanf conversion

	* README: update info

2001-06-01  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/commodity-utilities.scm: exchange functions 
	now return unchanged quantity if the two currencies are
	identical.

2001-06-01  Dave Peticolas  <dave@krondo.com>

	* src/doc/design/engine.texinfo: document commodity table API

	* src/doc/design/gnucash-design.texinfo: update docs

2001-05-31  Dave Peticolas  <dave@krondo.com>

	* src/engine/sixtp-dom-parsers.c (string_to_binary): fix sanity
	checks
	(dom_tree_to_gnc_numeric): fix mem leak

	* src/test/test-dom-converters1.c (test_dom_tree_to_gnc_numeric):
	fix bug

	* src/engine/sixtp-utils.c (string_to_gint32): use intermediate
	variable in case int != gint32.

	* src/test/test-dom-converters1.c: fix spelling

	* src/engine/sixtp-dom-generators.c (int_to_dom_tree): cast
	gint64 to long long int for %lld.

2001-05-31  James LewisMoss  <jimdres@mindspring.com>

	* src/scm/tip-of-the-day.scm ((gnc:current-tip-number)): reset
	number if greater.  tips read before config file so this number
	gets reset by config file too high.

2001-05-31  Dave Peticolas  <dave@krondo.com>

	* src/doc/design/gnucash-design.texinfo: update docs

	* src/doc/design/engine.texinfo: document commodites & their API

	* doc/sgml/C/xacc-price-editor.sgml: fix warnings
